<resources>
    //APP CONST
    <string name="app_name">Courier App</string>

    //TOAST MESSAGES
    <string name="toast_change_password">Password was changed</string>

    //MESSAGES
    <string name="enter_username_msg">Enter your username</string>
    <string name="enter_password_msg">Enter your password</string>
    <string name="enter_old_password_msg">Enter your old password</string>
    <string name="enter_new_password_msg">Enter your new password</string>
    <string name="enter_repeated_password_msg">Repeated your password</string>
    <string name="enter_login_new_worker">Enter username new worker</string>
    <string name="enter_email_new_worker">Enter email new worker</string>
    <string name="enter_worker_to_road_label">Below choose you worker from list</string>
    <string name="enter_data_to_create_delivery_point">Fill data below to create delivery point</string>
    <string name="input_expected_time">Input expected time in minutes below</string>

    //ERRORS
    <string name="login_error">Incorrect username or password</string>
    <string name="server_error">Server error</string>
    <string name="user_is_taken">User is taken</string>
    <string name="wrong_password_error">passwords is not the same</string>
    <string name="empty_fields_error">fields must not is blank</string>
    <string name="validation_failed">Validation is failed</string>

    //LABELS
    <string name="username_label">Username:</string>
    <string name="status_label">Status:</string>
    <string name="finished_roads_label">Finished roads:</string>
    <string name="started_time_label">Started:</string>
    <string name="finished_time_label">Finished:</string>
    <string name="delivery_points_label">Points:</string>
    <string name="assigned_worker_label">Assigned:</string>
    <string name="visited_label">Visited points:</string>
    <string name="saved_and_validated">Saved and validated</string>
    <string name="points_to_visit_label">Points to visit:</string>
    <string name="distance_estimated_label">Estimated distance (km):</string>
    <string name="estimated_time_travel_label">Estimated travel time (h):</string>
    <string name="time_traveled_label">Time traveled (h):</string>
    <string name="performance_opinion_label">Performance opinion:</string>


    //BUTTONS
    <string name="change_password_bt">Change password</string>
    <string name="log_in_bt">Log in</string>
    <string name="log_out_bt">Log out</string>
    <string name="sign_in_bt">Sign in</string>
    <string name="hire_an_employee_bt">Hire an employee</string>
    <string name="add_point_bt">Add point</string>
    <string name="remove_last_point_bt">Remove last</string>
    <string name="cancel_bt">Cancel</string>
    <string name="create_road_bt">Create Road</string>
    <string name="refresh_workers_spinner">Refresh list workers</string>
    <string name="save_bt">Save</string>
    <string name="delete_bt">Delete</string>
    <string name="create_delivery_point_bt">Create point</string>
    <string name="edit_delivery_point_bt">Edit point</string>
    <string name="visit_delivery_point_bt">Visit</string>
    <string name="visited_delivery_point_bt">Visited</string>
    <string name="start_road_bt">Start road</string>
    <string name="finish_road_bt">Finish road</string>

    //KEYS
    <string name="auth_preferences">auth_preferences</string>
    <string name="credentials_preferences">credentials_preferences</string>
    <string name="user_mode">user mode</string>
    <string name="adapter_delivery_points_to_visit_delivery_points">adapterToVisitDeliveryPoints</string>

    //HINTS
    <string name="enter_address_hint">Enter addresss</string>
    <string name="enter_postal_code_hint">Enter postal code</string>
    <string name="enter_city_hint">Enter city</string>
    <string name="enter_country_hint">Enter country</string>
    <string name="enter_expected_time_hint">Enter minutes value</string>

    //HELPER_TEXTS
    <string name="helper_text_address">Example: Radwańska 42</string>
    <string name="helper_text_postal_code">Example: 93–574</string>
    <string name="helper_text_city">Example: Lódź</string>
    <string name="helper_text_country">Example: Polska</string>
    <string name="helper_text_expended_time">Example: 30</string>
</resources>
